--- a/html bestanden/code.css
+++ b/html bestanden/code.css
@@ -1,7 +1,17 @@
 body{
     font-family: Arial;
-    background-color: yellow;
+    background-color: white;
 }
+
+body h1{
+    font-family: Arial;
+    background-color: blue;
+}
+
+body h3{
+    font-family: Arial;
+    background-color: aqua;
+    }
 
 header{
     background-color: deepskyblue;
@@ -24,7 +34,7 @@ a:visited {
   text-decoration: none;
 }
 a:hover {
-  color: red;
+  color: green;
   background-color: transparent;
   text-decoration: underline;
 }
@@ -45,6 +55,5 @@ main h2{
     color: blue;
 }
 main h3{
-    color: red;
+    color: green;
 }
-    
