--- a/html bestanden/code.css
+++ b/html bestanden/code.css
@@ -30,12 +30,12 @@ nav{
     float:left;
 }
 a:link {
-  color: blue;
+  color: black;
   background-color: transparent;
   text-decoration: none;
 }
 a:visited {
-  color: pink;
+  color: red;
   background-color: transparent;
   text-decoration: none;
 }
