--- a/html bestanden/code.css
+++ b/html bestanden/code.css
@@ -44,7 +44,7 @@ a:visited {
   text-decoration: none;
 }
 a:hover {
-  color: green;
+  color: blue;
   background-color: transparent;
   text-decoration: underline;
 }
